<resources>
    <string name="app_name">NG Rewards</string>
    <string name="FACEBOOK_APP_ID">396537575068789</string>
    <string name="facebook_app_id">396537575068789</string>
    <string name="fb_login_protocol_scheme">fb396537575068789</string>
    <string name="amper"><![CDATA[&]]></string>
    <string name="privacysefty"><![CDATA[Privacy & Safety]]></string>
    <string name="bytapingwithdraw"><![CDATA[By tapping withdraw you agree to our Terms & Conditions.]]></string>
    <string name="or_in_5_easy_payments">O in 5 easy payments</string>
    <string name="fulldayopen">24 hours</string>
    <string name="youleave">You can upload up to 10 images.</string>
    <string name="streetaddopt">Direction 2 (optional)</string>
    <string name="addopt">Direction line 2 (optional)</string>
    <string name="alreadyadded">Here added 7 photos.</string>
    <string name="tnc">Please accept our Terms of Service to continue</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="rotate">Rotate</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="profile">Profile</string>
    <string name="offers">Offers</string>
    <string name="menu">Menu</string>
    <string name="review">Review</string>
    <string name="tutorial">Tutorials</string>
    <string name="settings">Settings</string>
    <string name="rateus">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="payingyou">Paying you to shop local</string>
    <string name="enteryouremail">Enter Your Email</string>
    <string name="creataccount">Create an Account</string>
    <string name="or">Or</string>
    <string name="connectfacebook">Connect With Facebook</string>
    <string name="byregistering">By registering you agree to our Terms of Service</string>
    <string name="easy_pay">I want to make Easy Payments</string>
    <string name="byreg">By registering you agree to our</string>
    <string name="termsser">Terms of Service</string>
    <string name="privacy">Privacy Policy</string>
    <string name="allready">Already have an account?</string>
    <string name="loginhere">Log in Here.</string>
    <string name="next">Next</string>
    <string name="howdy">Howdy!</string>
    <string name="letcreateact">Lets create your account!</string>
    <string name="nowsecureit">Now let’s secure it with a password!</string>
    <string name="minichar">Minimum 6 characters</string>
    <string name="awesome">Awesome!</string>
    <string name="whatsyourname">Whats your name?</string>
    <string name="yourfirstlastnam">Your first and last name</string>
    <string name="uploadphot">Upload Photo</string>
    <string name="letspicusername">Lets pic a username!</string>
    <string name="letspicusername1">Create a username that you can share with friends!</string>
    <string name="username">Username</string>
    <string name="onelastthig">One last thing!\nWho invited you to NG\nRewards? (Optional)</string>
    <string name="onelastthig1">Who invited you to NG\nRewards? (Optional)</string>
    <string name="finish">Finish</string>
    <string name="invite">Invite</string>
    <string name="activity">Activity</string>
    <string name="paybill">Pay Bill</string>
    <string name="memberlogin">Member Log in</string>
    <string name="memberlogin1">Member Login</string>
    <string name="membernumber">Member Number</string>
    <string name="membernumber1">Username</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="bytap">By tapping Log in you agree to our</string>
    <string name="donthavemar">Don’t have a member account yet?</string>
    <string name="donthavemarchant">Don\'t have a merchant account yet?</string>
    <string name="signup">Sign up</string>
    <string name="searchngreward">Search NG Rewards</string>
    <string name="featured">Featured</string>
    <string name="nearby">Nearby</string>
    <string name="items">Items</string>
    <string name="paybill_t">Pay Bill</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="privatinfo">Private Information</string>
    <string name="email">Email</string>
    <string name="phonenumber">Phone Number</string>
    <string name="zip_code">Zip Code</string>
    <string name="gender">Gender</string>
    <string name="facebookfriends">Facebook Friends</string>
    <string name="contacts">Contacts</string>
    <string name="contactss">Easily invite your friends and earn more.</string>
    <string name="paymentmethod">PAYMENT METHOD</string>
    <string name="edit">Edit</string>
    <string name="genral">GENERAL</string>
    <string name="enabletouchid">Enable Touch ID</string>
    <string name="aboutngrew">About NG Rewards</string>
    <string name="careers">Careers</string>
    <string name="supports">SUPPORT</string>
    <string name="helpcenter">Help Center</string>
    <string name="repotprob">Report a Problem</string>
    <string name="deleteAccount">DeleteAccount</string>
    <string name="scancode">Scan Code</string>
    <string name="manual">Manual</string>
    <string name="searchforspecific">Search for specific transactions</string>
    <string name="previous">Previous</string>
    <string name="paypal">Stripe</string>
    <string name="ngcash">NGCash</string>
    <string name="category">Category</string>
    <string name="scanqrcodes">Scan QR Codes Created\nOnly by NG Rewards</string>
    <string name="merchantnumber">Merchant No</string>
    <string name="amountdue">Amount Due</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="avilbamt">Available Amount</string>
    <string name="apply">Apply</string>
    <string name="paymentmethod_sm">Payment Method</string>
    <string name="send">Send</string>
    <string name="subject">Subject</string>
    <string name="letusnow">Let us know what problems or issues\nyou have with our app.</string>
    <string name="allfeedbackap">All Feedback is appreciated.</string>
    <string name="nghelp">NG Rewards Help Center</string>
    <string name="howcanwehelp">How can we help?</string>
    <string name="usingngreward">Using NG Rewards</string>
    <string name="managingaccount">Managing your account</string>
    <string name="whatsnew">Whats New</string>
    <string name="blog">Blog</string>
    <string name="touchid">Touch ID</string>
    <string name="usetouchid">Use Touch ID</string>
    <string name="youusefing">You can use your fingerprint\nto log in to</string>
    <string name="ngrewars">NG Rewards</string>
    <string name="appand">app and\nauthorize payments.</string>
    <string name="invitefbfriend">Invite Facebook Friends</string>
    <string name="invitecon">Invite Your Contact</string>
    <string name="addnew">Add New</string>
    <string name="description">Description</string>
    <string name="googlemap">Google Map</string>
    <string name="sharethoughts">Share your thoughts with other customers</string>
    <string name="writecusrev">Write a customer review</string>
    <string name="topcustomerreview">Top customer reviews</string>
    <string name="about">About</string>
    <string name="photo">Photo</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="marchantlogin">Merchant Log in</string>
    <string name="marchantlogin1">Merchant Login</string>
    <string name="merchantnum">Merchant Number</string>
    <string name="merchantsignupgnup">Merchant\nSign up</string>
    <string name="hithere">Hey there !</string>
    <string name="letcreatmereact">Let’s create a merchant account! What’s your email?</string>
    <string name="nowletscreatepass">Now let’s create a password!</string>
    <string name="great">Great!</string>
    <string name="tellsubusiness">Tell us about your business.</string>
    <string name="businessdetial">Business Details</string>
    <string name="legelbusname">Legal Business Name</string>
    <string name="busname">Business Name</string>
    <string name="busiphone">Business Phone Number</string>
    <string name="permission_rationale">Storage permission is needed for fetching images from Gallery.</string>
    <string name="businesadd">Business Address</string>
    <string name="streetadd">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="whatper">What percantage do you want to\nreward NG members?</string>
    <string name="lastlywhoinvite">Who invited you to NG Rewards? (optional)</string>
    <string name="busineslogin">Business Log in</string>
    <string name="uploadbusipic">Upload\nBusiness pic</string>
    <string name="newpaymentmeth">New Payment Method</string>
    <string name="addcards">Add a Credit or Debit Card</string>
    <string name="adddbtcards">Add a Debit Card</string>
    <string name="ngacceptmost">NG Rewards Accept Most Major Credit and\nDebit Cards.</string>
    <string name="nameoncard">Name on card</string>
    <string name="expirydate">Expiration date</string>
    <string name="addyourcard">Add Your Card</string>
    <string name="search">Search</string>
    <string name="memearn">You earn cashback rewards in form of NGCash from shops found near you.</string>
    <string name="memearn1">Earn and redeem NGCash\nfor things you love.</string>
    <string name="bussell">Businesses who offer their services through our app and receive the most benefits from our rewards program.</string>
    <string name="bussell1">Sell through our app and\nbenefit from our rewards program.</string>
    <string name="logintxt">Log in</string>
    <string name="member">Member</string>
    <string name="merchant">Merchant</string>
    <string name="sales">Sales</string>
    <string name="audience">Audience</string>
    <string name="totalsal">Total sales your business made from</string>
    <string name="message">Message</string>
    <string name="welcome_farmers_to_the_ng_rewards_apps">Welcome Farmers to the NG Rewards apps.</string>
    <string name="to_maximize_your_earnings_please_join_our_training_program">To maximize your earnings, please join our training program.</string>
    <string name="in_this_training_you_will_learn">In this training you will learn:</string>
    <string name="how_to_use_ng_app">How To Use The NG App</string>
    <string name="search_for_businesses">Search for businesses</string>
    <string name="how_to_arrive_businesses">How to arrive to businesses</string>
    <string name="how_to_upload_your_method_of_payment">How to upload your method of payment</string>
    <string name="how_to_pay_businesses">How to pay businesses</string>
    <string name="how_to_pay_while_in_line">Hw to pay while in line</string>
    <string name="why_and_how_to_sign_up_new_members">Why and how to sign up new members</string>
    <string name="why_and_how_to_sign_up_new_merchants_to_the_ng_app">Why and how to sign up new Merchants to the NG app</string>
    <string name="get_started">Get Started</string>
    <string name="pay_for_training">Pay for training (not mandatory but essential to develop your Rewards system quickly and properly) and receive your first reward!</string>
    <string name="show_all_notification">Show all Notification</string>
    <string name="current_week">Current week</string>
    <string name="last_week">Last week</string>
    <string name="last_month">Last month</string>
    <string name="last_three_month">Last 3 month</string>
    <string name="email_verification">Email Verification</string>
    <string name="enable_two_factor_authentication">Enable Two-Factor Authentication</string>
    <string name="choose_your_preferred_verification_method">Choose your preferred verification method</string>
</resources>