<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_greeting_bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_65sdp"
                android:text="@string/welcome_farmers_to_the_ng_rewards_apps"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                android:textColor="@color/black"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/to_maximize_your_earnings_please_join_our_training_program"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/in_this_training_you_will_learn"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/red"
                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/_8sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/how_to_use_ng_app"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/black"
                    android:drawableLeft="@drawable/black_circle"
                    android:drawablePadding="@dimen/_6sdp"
                    android:textStyle="bold"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:gravity="center_vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/_11sdp"
                        android:layout_height="@dimen/_11sdp"
                        android:src="@drawable/ic_bulit"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/search_for_businesses"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:layout_marginStart="@dimen/_8sdp"
                        />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/_11sdp"
                        android:layout_height="@dimen/_11sdp"
                        android:src="@drawable/ic_bulit"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/how_to_arrive_businesses"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:layout_marginStart="@dimen/_8sdp"
                        />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/_11sdp"
                        android:layout_height="@dimen/_11sdp"
                        android:src="@drawable/ic_bulit"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/how_to_upload_your_method_of_payment"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:layout_marginStart="@dimen/_8sdp"
                        />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/_11sdp"
                        android:layout_height="@dimen/_11sdp"
                        android:src="@drawable/ic_bulit"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/how_to_pay_businesses"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:layout_marginStart="@dimen/_8sdp"
                        />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    >

                    <ImageView
                        android:layout_width="@dimen/_11sdp"
                        android:layout_height="@dimen/_11sdp"
                        android:src="@drawable/ic_bulit"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/how_to_pay_while_in_line"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:layout_marginStart="@dimen/_8sdp"
                        />


                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/why_and_how_to_sign_up_new_members"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/black_circle"
                    android:drawablePadding="@dimen/_6sdp"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/why_and_how_to_sign_up_new_merchants_to_the_ng_app"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/black_circle"
                    android:drawablePadding="@dimen/_6sdp"

                    />
            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/pay_for_training"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                />



            <TextView
                android:id="@+id/btnStarted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/pink_border"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/get_started"
                android:textColor="@color/white"
                android:textSize="@dimen/medium">

            </TextView>



        </LinearLayout>

    </ScrollView>


</LinearLayout>