<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white_bg_20">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_height="1dp"
                android:background="@color/gray_btn_bg_color"/>

                <TextView
                    android:id="@+id/tvAllNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_all_notification"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:padding="@dimen/_10sdp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_btn_bg_color"/>


                <TextView
                    android:id="@+id/tvCurrentWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_week"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:padding="@dimen/_10sdp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_btn_bg_color"/>

                <TextView
                    android:id="@+id/tvLastWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_week"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:padding="@dimen/_10sdp"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_btn_bg_color"/>



                <TextView
                    android:id="@+id/tvLastMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_month"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:padding="@dimen/_10sdp"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_btn_bg_color"/>


                <TextView
                    android:id="@+id/tvLast3Month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_three_month"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:padding="@dimen/_10sdp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_btn_bg_color"/>




            <androidx.cardview.widget.CardView
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_10sdp"
                android:layout_margin="@dimen/_25sdp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/_10sdp"
                    />


            </androidx.cardview.widget.CardView>



            </LinearLayout>


    </RelativeLayout>

</layout>