<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white_bg_20">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_two_factor_authentication"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:padding="@dimen/_7sdp"
                android:alpha=".5"

                />




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_your_preferred_verification_method"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:alpha=".5"
                android:padding="@dimen/_7sdp"
                />














            <androidx.cardview.widget.CardView
                android:id="@+id/btnEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_verification"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_12sdp"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/_10sdp"
                    />


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_20sdp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_12sdp"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/_10sdp"
                    />


            </androidx.cardview.widget.CardView>



        </LinearLayout>


    </RelativeLayout>

</layout>